--- a/index.html
+++ b/index.html
@@ -31,6 +31,30 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '393687624156866',
+          xfbml      : true,
+          version    : 'v2.3'
+        });
+      };
+
+      FB.ui(
+      {
+        method: 'share',
+        href: 'https://developers.facebook.com/docs/'
+      }, function(response){});
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -122,6 +146,8 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+
+
 
 </body>
 
