--- a/index.html
+++ b/index.html
@@ -33,6 +33,36 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+   <script>
+      function facebookInit() {
+   		FB.ui(
+	    {
+	    	method: 'share',
+	        href: 'https://develpers.facebook.com/docs/'
+	    }, function(response){});
+	}
+
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '393687624156866',
+          xfbml      : true,
+          version    : 'v2.3'
+        });
+
+	    if (typeof facebookInit == 'function') {
+	        facebookInit();
+	    }        
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "https://connect.facebook.net/en_US/sdk.js%20net::ERR_FILE_NOT_FOUND";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -104,6 +134,12 @@
 	            		<i class="fa fa-home fa-stack-1x white"></i>
 	            	</span>            		
             		<div class="blue big-font">60%</div> of water usage in San Diego is residential.
+            		<div
+  class="fb-like"
+  data-send="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
         		</div>
 	         </div>
         </div>
