Title and one more fact

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>WaterMelon - San Diegans unite against California drought.</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -134,13 +134,14 @@
 	            		<i class="fa fa-home fa-stack-1x white"></i>
 	            	</span>            		
             		<div class="blue big-font">60%</div> of water usage in San Diego is residential.
-            		<div
-  class="fb-like"
-  data-send="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
         		</div>
+				<div class ="facts-wrapper col-md-3 col-sm-6">
+            		<span class="fa-stack fa-4x">
+            			<i class="fa fa-circle fa-stack-2x blue"></i>
+	            		<i class="fa fa-user fa-stack-1x white"></i>
+	            	</span>            		
+            		<div class="blue big-font">150 gal.</div> of water is used in a day by the average person.
+        		</div>        		
 	         </div>
         </div>
     </section>
